Text-align fix, object destructuring and map experimentation

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -150,6 +150,7 @@ body {
   &__desc {
     font-weight: 700;
     grid-row: 4/5;
+    text-align:center;
   }
 
   &__temp {
